--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,32 @@ header {
 
 .darkMode {
   background-color: #1c1b1b;
+  transition: 500ms;
+}
+
+.darkMode > header > nav > ul > li:first-child > a {
+  color: #000000;
+  transition: 1000ms;
+}
+
+.darkMode > header > nav > ul > li.active > a::before {
+  background-color: #000000;
+  transition: 500ms;
+}
+
+.darkMode > header > .hamMenu {
+  background-color: #343434;
+  transition: 500ms;
+}
+
+.darkMode > header > .hamMenu > ul > li > a {
+  color: #ffffff;
+  transition: 500ms;
 }
 
 .lightMode {
   background-color: #f9f8fc;
+  transition: 500ms;
 }
 
 nav {
@@ -88,6 +110,8 @@ nav > button > svg {
   background-color: #dadada;
   position: relative;
   transform: translateX(200%);
+  z-index: 2;
+  transition: 500ms;
 }
 
 .hamMenu.active {
@@ -117,23 +141,18 @@ li.active {
 
 .active > a::before {
   position: absolute;
-  content: ".";
+  content: "";
   height: 3px;
   width: 100%;
   top: 40px;
-  background-color: #000000;
+  background-color: #f9f8fc;
 }
 
 .hamMenu > ul > li > a {
   color: #000000;
   text-decoration: none;
   font-size: 16px;
-  transition: 350ms;
-}
-
-.hamMenu > ul > li > a:focus {
-  font-weight: bold;
-  color: #000000;
+  transition: 500ms;
 }
 
 .hamMenu > ul > li > a:focus {
@@ -241,19 +260,4 @@ li.active {
     min-width: 30px;
     border-radius: 8px;
   }
-
-  /*  #menuSandwich:hover #middlelayer {
-    transition: 0.3s ease-in-out;
-    opacity: 0;
-  }
-
-  #menuSandwich:hover #upperlayer {
-    transition: 0.5s ease-in-out;
-    transform: rotate(45deg) translateY(14px);
-  }
-
-  #menuSandwich:hover #lowerlayer {
-    transition: 0.5s ease-in-out;
-    transform: rotate(-45deg) translateY(-14px);
-  }*/
 }
